--- a/user/view/default/public/contact.html
+++ b/user/view/default/public/contact.html
@@ -3,7 +3,7 @@
 	<table id="table_news" cellpadding="0" cellspacing="0" >
 		<tr>
 			<td colspan="2" background="{{$STATIC}}images/nav_bg.jpg" class="right_hg right fontcolor">
-				当前位置 : <a href="/">首页</a> >> <a href="?c=help&a=index">使用帮助</a>
+				当前位置 : <a href="/">首页</a> >> <a href="?c=public&a=contact">联系我们</a>
 			</td>
 		</tr>
 		<tr><td colspan="2" height="5"></td></tr>
