--- a/user/view/default/session/login.html
+++ b/user/view/default/session/login.html
@@ -19,14 +19,23 @@ function ValidateForm()
 				  <tr>
 					<td colspan="2" align="left"><img src="{{$STATIC}}style/agent_log.jpg" /></td>
 				  </tr>
+				  	<tr>
+					<td colspan="2" class="td_hg" align="center">&nbsp;</td>
+				  </tr>
 				  <tr>
 					<td colspan="2" class="td_hg" align="center">用户名:&nbsp;<input type="text" name="username" /></td>
+				  </tr>
+				  <tr>
+					<td colspan="2" height="10" align="center"></td>
 				  </tr>
 				  <tr>
 					<td colspan="2" class="td_hg" align="center">&nbsp;密码:&nbsp;&nbsp;<input type="password" name="passwd"/></td>
 				  </tr>
 				  <tr>
 					<td colspan="2" class="td_hg" align="center"><input type="submit" value="登 录" /></td>
+				  </tr>
+				  	<tr>
+					<td colspan="2" class="td_hg" align="center">&nbsp;</td>
 				  </tr>
 				</table>
 	  </form>
