--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -58,7 +58,7 @@ function SwitchMenu(obj,sty)
 		</ul>
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">虚拟主机/cdn</ol>	</h1>
 		<ul class="submenu left_linght" id="sub6" >
-			<li><a href="?c=vhost&a=pageVhost" target='main'>用户列表</a></li>	
+			<li><a href="?c=vhost&a=pageVhost" target='main'>站点列表</a></li>	
 			<li><a href="?c=vhost&a=pageVhostByExpire_time&day=1" target='main'>过期列表</a></li>	
 			<li><a href="?c=vhostproduct&a=showProduct" target='main'>产品列表</a></li>	
 			<li><a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a></li>
