--- a/admin/view/default/vhostproduct/listVhost.html
+++ b/admin/view/default/vhostproduct/listVhost.html
@@ -2,7 +2,7 @@
 <body bgcolor='#ffffff' text='#000000' leftmargin='0' topmargin='0'>
 <div align="center">
 	<div class="wid_main mar_main" align="left">
-		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 用户列表</div>
+		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 站点列表</div>
 		<table class="table_main2 mar_main" cellpadding="0" cellspacing="1">
 			<form name="form1" method="post" action="?c=vhost&a=showVhost">
 			<tr>
@@ -14,7 +14,7 @@
 			</tr>
 			</form>
 			<tr>
-				<td colspan="11" class="bg_main"><b>用户列表</b></td>
+				<td colspan="11" class="bg_main"><b>站点列表</b></td>
 			</tr>
 			<tr class="bg_yellow">
 				<td>操作</td>
